--- a/DSWM/Curriculo/style.css
+++ b/DSWM/Curriculo/style.css
@@ -1,21 +1,30 @@
-#Foto{
+#Foto {
     border-radius: 50%;
     width: 300px;
     height: 300px;
 }
-body{
-    background-color: rgb(4, 4, 4);
+body {
+    background-color: #2c3e50;
     font-family: Arial, Helvetica, sans-serif;
-    color: aliceblue;
+    color: #ecf0f1; 
     text-align: center;
+    padding-bottom: 60px; 
+    margin: 0;
 }
-#quad{
-    border: 2px solid white;
+
+#quad {
+    border: 2px solid #34495e; 
+    color: #2c3e50; 
     border-radius: 10px;
-    width: 300px;
+    width: 80%;
     height: auto;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: rgb(49, 10, 10);
+    margin: 20px auto;
+    background-color: #ecf0f1; 
+    padding: auto;
+}
+#rodapé {
+    text-align: center;
+    padding-top: 15px;  
+    padding-bottom: auto;
 }
