--- a/DSWM/Curriculo/style.css
+++ b/DSWM/Curriculo/style.css
@@ -1,7 +1,8 @@
 #Foto {
     border-radius: 50%;
-    width: 300px;
-    height: 300px;
+    width: 200px;
+    height: 200px;
+    margin-right: 20px;
 }
 body {
     background-color: #2c3e50;
@@ -10,6 +11,14 @@ body {
     text-align: center;
     padding-bottom: 60px; 
     margin: 0;
+    height: 100vh;
+    overflow: hidden;
+}
+#content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
 }
 
 #quad {
